DAY9 final file

--- a/Binary_data_sumup_final.ipynb
+++ b/Binary_data_sumup_final.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOS1rwZNQzX/9cBjZYRKi+c",
+      "authorship_tag": "ABX9TyPHdcTLhMAuZxl0RJYmiZqE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "#[이진분류모델] 천체의 펄서(Pulsar) 판정하기\n",
         "\n",
         "## 0. 들어가기에 앞서..\n",
-        "펄서스타란, 1968년 영국의 천문학자 버넬과 휴이시가 발견한 **강한 자기장을 가진 채 빠르게 회전하는 중성자별**로 추정됩니다. 매우 빠르게 회전하면서 전파를 방출하며,  맥동전파원()이라고 하여 1.5ms~8.5sec 정도 주기로 신호의 강도가 변화되어 규칙적으로 깜빡이게되는데, 이때문에 우주의 등대라는 별명을 갖게되었습니다.       \n",
+        "펄서스타란, 1968년 영국의 천문학자 버넬과 휴이시가 발견한 **강한 자기장을 가진 채 빠르게 회전하는 중성자별**로 추정됩니다. 매우 빠르게 회전하면서 전파를 방출하며,  맥동전파원이라고 하여 1.5ms~8.5sec 정도 주기로 신호의 강도가 변화되어 규칙적으로 깜빡이게되는데, 이때문에 우주의 등대라는 별명을 갖게되었습니다.       \n",
         "      \n",
         "펄서의 여부는 망원경으로는 식별이 어려워 전파 망원경으로 관측하고있으며, 전파 망원경에 잡히는 많은 천체 중 펄서 후보를 추정하면 소수 후보에 대한 집중적인 정밀관측이 가능해지기 때문에 반드시 판정과정이 필요합니다.    \n",
         "     \n",
@@ -250,11 +250,11 @@
         "df.isnull().sum()"
       ],
       "metadata": {
-        "id": "PPoMhiHjS7-9",
-        "outputId": "b27381c3-dbec-4413-bb54-0b0785466dfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PPoMhiHjS7-9",
+        "outputId": "b27381c3-dbec-4413-bb54-0b0785466dfe"
       },
       "execution_count": 10,
       "outputs": [
@@ -878,12 +878,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "8hPrBZVRY5OI",
-        "outputId": "a65410be-ca3e-495d-8770-f33efca4c903",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "8hPrBZVRY5OI",
+        "outputId": "a65410be-ca3e-495d-8770-f33efca4c903"
       },
       "execution_count": 22,
       "outputs": [
@@ -927,12 +927,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "k8fhPN6sZQh8",
-        "outputId": "e0c04bec-4aef-48d1-de82-686d5f380a08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "k8fhPN6sZQh8",
+        "outputId": "e0c04bec-4aef-48d1-de82-686d5f380a08"
       },
       "execution_count": 24,
       "outputs": [
@@ -959,12 +959,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "fzuAcqcqZSeF",
-        "outputId": "73133fc0-f73c-4d53-e984-9e9e60e037ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "fzuAcqcqZSeF",
+        "outputId": "73133fc0-f73c-4d53-e984-9e9e60e037ee"
       },
       "execution_count": 25,
       "outputs": [
@@ -1107,11 +1107,11 @@
         "print('DL data target: ', y_train_DL.value_counts())"
       ],
       "metadata": {
-        "id": "-V2DGPB_ajbn",
-        "outputId": "9cc07273-54a4-4004-ce73-5c7134838135",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-V2DGPB_ajbn",
+        "outputId": "9cc07273-54a4-4004-ce73-5c7134838135"
       },
       "execution_count": 31,
       "outputs": [
@@ -2267,11 +2267,11 @@
         "print(f\"최적의 매개변수: {grid.best_params_}\")"
       ],
       "metadata": {
-        "id": "4ilcQ-SWezWn",
-        "outputId": "95359209-68fc-43a6-b04a-f25c5e0b2eec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4ilcQ-SWezWn",
+        "outputId": "95359209-68fc-43a6-b04a-f25c5e0b2eec"
       },
       "execution_count": 45,
       "outputs": [
@@ -2304,11 +2304,11 @@
         "get_clf_eval(y_test, y_pred)"
       ],
       "metadata": {
-        "id": "4WwofdztfIKZ",
-        "outputId": "d613d7ff-29cb-4ea6-813f-ef0aedcd56e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4WwofdztfIKZ",
+        "outputId": "d613d7ff-29cb-4ea6-813f-ef0aedcd56e8"
       },
       "execution_count": 47,
       "outputs": [
@@ -2329,12 +2329,12 @@
         "cf_maxtix(y_test, y_pred)"
       ],
       "metadata": {
-        "id": "6o-vz5_sfJ81",
-        "outputId": "140dbe27-1da9-4790-e597-2b91e2a048c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "6o-vz5_sfJ81",
+        "outputId": "140dbe27-1da9-4790-e597-2b91e2a048c3"
       },
       "execution_count": 48,
       "outputs": [
@@ -2441,11 +2441,11 @@
         "print('recall_score', recall_score(y_test, y_pred_binary))"
       ],
       "metadata": {
-        "id": "zWLSRhqpfdPa",
-        "outputId": "1a4a3564-193d-4861-883a-c42f8c3efea1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zWLSRhqpfdPa",
+        "outputId": "1a4a3564-193d-4861-883a-c42f8c3efea1"
       },
       "execution_count": 56,
       "outputs": [
