--- a/Multi_data_sumup.ipynb
+++ b/Multi_data_sumup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgIk6NEkdXzduTmEakS/Nr",
+      "authorship_tag": "ABX9TyM5wYBN8CvPcyAKWnU9rt/k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3270,11 +3270,11 @@
         "print(metrics.classification_report(y_test_ML,y_pred))"
       ],
       "metadata": {
-        "id": "KLqHivwdyEl4",
-        "outputId": "a72634f4-738a-44b6-ab34-c9dea986be25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KLqHivwdyEl4",
+        "outputId": "a72634f4-738a-44b6-ab34-c9dea986be25"
       },
       "execution_count": 31,
       "outputs": [
@@ -3406,103 +3406,72 @@
         "print(\"==== val los acc ====\")\n",
         "val_loss, val_acc = model.evaluate(X_val, y_val, verbose=2)\n",
         "\n",
-        "# y_pred = model.predict(X_test)\n",
-        "# print(\"=== test los acc ===\")\n",
-        "# test_loss, test_acc = model.evaluate(X_test, y_test, verbose=2)"
+        "y_pred = model.predict(X_test)\n",
+        "print(\"=== test los acc ===\")\n",
+        "test_loss, test_acc = model.evaluate(X_test, y_test, verbose=2)"
       ],
       "metadata": {
-        "id": "1dpCN3uT-bpD",
-        "outputId": "4ec829dd-125b-4008-c17a-70e4aa9261fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1dpCN3uT-bpD",
+        "outputId": "f57a817a-c961-4bae-a19f-79b497651267"
       },
-      "execution_count": 34,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/1000\n",
-            "20/20 [==============================] - 10s 41ms/step - loss: 2.5379 - accuracy: 0.1555 - val_loss: 1.8955 - val_accuracy: 0.1994\n",
+            "20/20 [==============================] - 6s 52ms/step - loss: 2.6085 - accuracy: 0.1676 - val_loss: 2.0004 - val_accuracy: 0.2701\n",
             "Epoch 2/1000\n",
-            "20/20 [==============================] - 0s 24ms/step - loss: 2.3319 - accuracy: 0.2015 - val_loss: 1.8022 - val_accuracy: 0.3119\n",
+            "20/20 [==============================] - 1s 26ms/step - loss: 2.3485 - accuracy: 0.2087 - val_loss: 1.8603 - val_accuracy: 0.3376\n",
             "Epoch 3/1000\n",
-            "20/20 [==============================] - 0s 25ms/step - loss: 2.1392 - accuracy: 0.2385 - val_loss: 1.7539 - val_accuracy: 0.2926\n",
+            "20/20 [==============================] - 0s 24ms/step - loss: 2.1483 - accuracy: 0.2345 - val_loss: 1.7818 - val_accuracy: 0.4019\n",
             "Epoch 4/1000\n",
-            "20/20 [==============================] - 1s 26ms/step - loss: 1.9954 - accuracy: 0.2724 - val_loss: 1.7074 - val_accuracy: 0.3055\n",
+            "20/20 [==============================] - 1s 26ms/step - loss: 1.9835 - accuracy: 0.2925 - val_loss: 1.7081 - val_accuracy: 0.4244\n",
             "Epoch 5/1000\n",
-            "20/20 [==============================] - 1s 26ms/step - loss: 1.9328 - accuracy: 0.2788 - val_loss: 1.6518 - val_accuracy: 0.3344\n",
+            "20/20 [==============================] - 0s 24ms/step - loss: 1.9775 - accuracy: 0.2925 - val_loss: 1.6299 - val_accuracy: 0.4662\n",
             "Epoch 6/1000\n",
-            "20/20 [==============================] - 0s 25ms/step - loss: 1.8229 - accuracy: 0.3054 - val_loss: 1.5918 - val_accuracy: 0.4019\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.8637 - accuracy: 0.3118 - val_loss: 1.5618 - val_accuracy: 0.4823\n",
             "Epoch 7/1000\n",
-            "20/20 [==============================] - 0s 24ms/step - loss: 1.7712 - accuracy: 0.3449 - val_loss: 1.5460 - val_accuracy: 0.4244\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.8287 - accuracy: 0.3417 - val_loss: 1.5242 - val_accuracy: 0.4823\n",
             "Epoch 8/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.7223 - accuracy: 0.3642 - val_loss: 1.5331 - val_accuracy: 0.4373\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.7268 - accuracy: 0.3546 - val_loss: 1.5075 - val_accuracy: 0.4630\n",
             "Epoch 9/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.7177 - accuracy: 0.3691 - val_loss: 1.5314 - val_accuracy: 0.4502\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.6985 - accuracy: 0.3892 - val_loss: 1.5038 - val_accuracy: 0.4727\n",
             "Epoch 10/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.6366 - accuracy: 0.3932 - val_loss: 1.5417 - val_accuracy: 0.4212\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.6226 - accuracy: 0.4142 - val_loss: 1.5013 - val_accuracy: 0.4984\n",
             "Epoch 11/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.6162 - accuracy: 0.3973 - val_loss: 1.5446 - val_accuracy: 0.4502\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.6889 - accuracy: 0.3989 - val_loss: 1.4991 - val_accuracy: 0.4855\n",
             "Epoch 12/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.6144 - accuracy: 0.4102 - val_loss: 1.5267 - val_accuracy: 0.4695\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.6497 - accuracy: 0.4037 - val_loss: 1.5092 - val_accuracy: 0.4727\n",
             "Epoch 13/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.5543 - accuracy: 0.4230 - val_loss: 1.5122 - val_accuracy: 0.4759\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.5776 - accuracy: 0.4222 - val_loss: 1.5344 - val_accuracy: 0.4887\n",
             "Epoch 14/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.5752 - accuracy: 0.4295 - val_loss: 1.4960 - val_accuracy: 0.4759\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.5410 - accuracy: 0.4287 - val_loss: 1.5221 - val_accuracy: 0.4759\n",
             "Epoch 15/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.5477 - accuracy: 0.4335 - val_loss: 1.4948 - val_accuracy: 0.4791\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.5639 - accuracy: 0.4432 - val_loss: 1.4973 - val_accuracy: 0.4759\n",
             "Epoch 16/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.5417 - accuracy: 0.4319 - val_loss: 1.5018 - val_accuracy: 0.4759\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.5247 - accuracy: 0.4553 - val_loss: 1.5179 - val_accuracy: 0.4759\n",
             "Epoch 17/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.5229 - accuracy: 0.4255 - val_loss: 1.4954 - val_accuracy: 0.4727\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.5429 - accuracy: 0.4376 - val_loss: 1.5254 - val_accuracy: 0.4759\n",
             "Epoch 18/1000\n",
-            "20/20 [==============================] - 1s 36ms/step - loss: 1.5170 - accuracy: 0.4545 - val_loss: 1.4855 - val_accuracy: 0.4695\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.4962 - accuracy: 0.4625 - val_loss: 1.5473 - val_accuracy: 0.4759\n",
             "Epoch 19/1000\n",
-            "20/20 [==============================] - 0s 21ms/step - loss: 1.4886 - accuracy: 0.4512 - val_loss: 1.4875 - val_accuracy: 0.4759\n",
+            "20/20 [==============================] - 0s 16ms/step - loss: 1.4985 - accuracy: 0.4504 - val_loss: 1.5199 - val_accuracy: 0.4759\n",
             "Epoch 20/1000\n",
-            "20/20 [==============================] - 0s 25ms/step - loss: 1.4792 - accuracy: 0.4464 - val_loss: 1.4756 - val_accuracy: 0.4695\n",
-            "Epoch 21/1000\n",
-            "20/20 [==============================] - 1s 32ms/step - loss: 1.4809 - accuracy: 0.4666 - val_loss: 1.4715 - val_accuracy: 0.4727\n",
-            "Epoch 22/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4734 - accuracy: 0.4537 - val_loss: 1.4688 - val_accuracy: 0.4823\n",
-            "Epoch 23/1000\n",
-            "20/20 [==============================] - 1s 27ms/step - loss: 1.4714 - accuracy: 0.4521 - val_loss: 1.4735 - val_accuracy: 0.4887\n",
-            "Epoch 24/1000\n",
-            "20/20 [==============================] - 1s 30ms/step - loss: 1.4423 - accuracy: 0.4722 - val_loss: 1.4630 - val_accuracy: 0.4920\n",
-            "Epoch 25/1000\n",
-            "20/20 [==============================] - 0s 14ms/step - loss: 1.4423 - accuracy: 0.4730 - val_loss: 1.4709 - val_accuracy: 0.4855\n",
-            "Epoch 26/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4481 - accuracy: 0.4649 - val_loss: 1.4664 - val_accuracy: 0.4984\n",
-            "Epoch 27/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4432 - accuracy: 0.4754 - val_loss: 1.4704 - val_accuracy: 0.5016\n",
-            "Epoch 28/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4368 - accuracy: 0.4714 - val_loss: 1.4596 - val_accuracy: 0.4952\n",
-            "Epoch 29/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4314 - accuracy: 0.4609 - val_loss: 1.4401 - val_accuracy: 0.4952\n",
-            "Epoch 30/1000\n",
-            "20/20 [==============================] - 0s 14ms/step - loss: 1.4285 - accuracy: 0.4682 - val_loss: 1.4396 - val_accuracy: 0.4952\n",
-            "Epoch 31/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4318 - accuracy: 0.4746 - val_loss: 1.4325 - val_accuracy: 0.4984\n",
-            "Epoch 32/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4188 - accuracy: 0.4819 - val_loss: 1.4253 - val_accuracy: 0.4984\n",
-            "Epoch 33/1000\n",
-            "20/20 [==============================] - 0s 16ms/step - loss: 1.4202 - accuracy: 0.4811 - val_loss: 1.4319 - val_accuracy: 0.4952\n",
-            "Epoch 34/1000\n",
-            "20/20 [==============================] - 0s 15ms/step - loss: 1.4057 - accuracy: 0.4730 - val_loss: 1.4230 - val_accuracy: 0.4952\n",
-            "Epoch 35/1000\n",
-            "20/20 [==============================] - 0s 22ms/step - loss: 1.3849 - accuracy: 0.4988 - val_loss: 1.4224 - val_accuracy: 0.4984\n",
-            "Epoch 36/1000\n",
-            "20/20 [==============================] - 0s 23ms/step - loss: 1.4021 - accuracy: 0.4923 - val_loss: 1.4264 - val_accuracy: 0.4887\n",
-            "Epoch 37/1000\n",
-            "20/20 [==============================] - 0s 24ms/step - loss: 1.4171 - accuracy: 0.4746 - val_loss: 1.4252 - val_accuracy: 0.4887\n",
+            "20/20 [==============================] - 0s 15ms/step - loss: 1.4635 - accuracy: 0.4722 - val_loss: 1.5043 - val_accuracy: 0.4920\n",
             "==== Final Model ====\n",
-            "걸린시간 : 24.023167610168457\n",
+            "걸린시간 : 12.787034273147583\n",
             "==== train los acc ====\n",
-            "39/39 - 0s - loss: 1.2968 - accuracy: 0.5246 - 129ms/epoch - 3ms/step\n",
+            "39/39 - 0s - loss: 1.3818 - accuracy: 0.5189 - 153ms/epoch - 4ms/step\n",
             "==== val los acc ====\n",
-            "10/10 - 0s - loss: 1.4252 - accuracy: 0.4887 - 47ms/epoch - 5ms/step\n"
+            "10/10 - 0s - loss: 1.5043 - accuracy: 0.4920 - 55ms/epoch - 5ms/step\n",
+            "13/13 [==============================] - 0s 3ms/step\n",
+            "=== test los acc ===\n",
+            "13/13 - 0s - loss: 1.4145 - accuracy: 0.5039 - 56ms/epoch - 4ms/step\n"
           ]
         }
       ]
